# OpenFinOps

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  IAM_IMPLEMENTATION_SUMMARY.md  LICENSE  PYPI_UPLOAD_SUCCESS.md  QUICKSTART.md  README.md  TESTING_SETUP.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_REPORT.md  add_copyright.py  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  test_webui.py
.github/workflows/: ci.yml
agents/: README.md  aws_telemetry_agent.py  azure_telemetry_agent.py  databricks_telemetry_agent.py  gcp_telemetry_agent.py  generic_telemetry_agent.py  saas_services_telemetry_agent.py  snowflake_telemetry_agent.py
docs/: IAM_QUICK_REFERENCE.md  IAM_SYSTEM_OVERVIEW.md  IAM_USAGE.md  IMPLEMENTATION_GUIDE.md  OBSERVABILITY_ARCHITECTURE.md  README.md  TELEMETRY_AGENT_DEPLOYMENT.md
docs/api/: dashboard-api.md  observability-api.md  telemetry-agents.md  vizlychart-api.md
docs/getting-started/: installation.md  quickstart.md
docs/tutorials/: basic-usage.md
examples/: README.md  enterprise_data_connectors_demo.py  multi_cloud_cost_generator.py  quickstart.py  web_dashboard_demo.py
src/openfinops/: __init__.py  cli.py
src/openfinops/config/: __init__.py  local_config.py
src/openfinops/dashboard/: __init__.py  auth_middleware.py  cfo_dashboard.py  coo_dashboard.py  dashboard_router.py  finance_analyst_dashboard.py  iam_cli.py  iam_config.yaml  iam_config_loader.py  iam_system.py  infrastructure_leader_dashboard.py  model_cost_dashboard.py  recommendations_dashboard.py
src/openfinops/database/: __init__.py  database_manager.py
src/openfinops/observability/: __init__.py  ai_recommendations.py  alerting_engine.py  cost_configuration.py  cost_observatory.py  cost_reporting.py  distributed_telemetry.py  finops_dashboards.py  hardware_recommendations.py  infrastructure_automation.py  infrastructure_dashboard.py  intelligent_recommendations.py  llm_config.py  llm_dashboards.py  llm_observability.py  model_cost_attribution.py  observability_hub.py  performance_dashboard.py  scaling_recommendations.py  security_monitor.py  service_mesh.py  system_monitor.py  telemetry_control_tower.py  telemetry_server.py  vizly_chart_integration.py
src/openfinops/vizlychart/: __init__.py  cli.py  demo_comprehensive.py  exceptions.py  figure.py  interaction3d.py  theme.py  vizly_isolation_config.py
src/openfinops/vizlychart/ai/: __init__.py  nlp.py  recommendation_engine.py  smart_selection.py  styling.py
src/openfinops/vizlychart/ai_training/: __init__.py  anomaly_detection.py  distributed_training_monitor.py  early_stopping.py  gradient_viz.py  hyperparameter_viz.py  loss_landscape.py  model_comparison.py  resource_monitor.py  streaming_metrics.py  training_monitor.py
src/openfinops/vizlychart/animation/: __init__.py  animation_core.py
src/openfinops/vizlychart/backends/: __init__.py  unified.py
src/openfinops/vizlychart/cae/: __init__.py  analysis.py  animation.py  fields.py  geometry.py  mesh.py
src/openfinops/vizlychart/charts/: __init__.py  advanced.py  advanced_charts.py  bar.py  base.py  box.py  chart_3d.py  datascience.py  engineering.py  (+8 more)
src/openfinops/webui/: __init__.py  server.py
tests/: README.md  conftest.py  test_dashboards.py  test_integration.py  test_llm_observability.py  test_observability_hub.py  test_telemetry_agents.py  test_vizlychart.py
website/: .dockerignore  README.md  api.html  demo.html  documentation.html  features.html  index.html  sitemap.xml
website/js/: main.js
(+97 files in other folders)
